made button compute

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,14 @@ block content
   h1= title
   p Welcome to #{title}
   p My name is Isaac
-  button(type="button", class="btn btn-primary") Press Me
+  button(type="button", class="btn btn-primary" Press Me,  onClick="update()") Press Me
+  div(id="target") Display
+  a(href="/televisionShowsRouter") GO TO SEARCH
+
+   script.
+    let client_count = 0;
+    function update() {
+      client_count += 1;
+      out = document.getElementById('target');
+      out.innerHTML = "Value now " + client_count;
+    }
