added details for movie

--- a/views/movie.pug
+++ b/views/movie.pug
@@ -2,3 +2,8 @@ extends layout
 
 block content
   h1= title
+   - let result = [{name:"Harry Porter", length:48, director:"Chris Columbus"}, {name:"Bloodshot", length:68, director:"David Wilson"}, {name:"King Arthur", length: 108, director:"Guy Ritchie"}]
+  div(class="container-fluid")
+    div(class="row")
+    each value in result 
+      div(class="col-sm-2") Name: #{value.name} length : #{value.length} director: #{value.director}
