--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
   p My name is Isaac
   button(type="button", class="btn btn-primary" Press Me,  onClick="update()") Press Me
   div(id="target") Display
-  a(href="/movie") GO TO SEARCH
+  a(href="/movie") SEARCH
 
    script.
     let client_count = 0;
